services/dns/pihole/k8s/pihole-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-lan
  namespace: dns
  labels:
    app.kubernetes.io/name: pihole
    app.kubernetes.io/part-of: homelab-dns
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.200.100
spec:
  selector:
    app.kubernetes.io/name: pihole
  ports:
    - name: dns-udp
      port: 53
      targetPort: dns-udp
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: dns-tcp
      protocol: TCP
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: LoadBalancer
